--- a/OR/Configs/Fracture.cfg
+++ b/OR/Configs/Fracture.cfg
@@ -13,7 +13,7 @@
 		}
 		Properties
 		{
-			description = <color=#CC0300>[HAZARD LEVEL: 5] \n[CLASS: Exotic Atmospheric]</color> \nFracture is a hellish world dancing on the edge of the inferno. Its proximity to Solus has partially melted its surface, creating dangerous lava oceans. A superheated atmosphere of escaping volcanic fumes and rock vapor encompasses the planet. Extreme caution should be taken while exploring the surface.\n\nFracture was discovered during an analysis of Solus’ sunspots. Some Kerbals say it, “looks like Moho, but in the stories”.\n\nWEATHER REPORT: Severe. Vaporized rock escapes Fracture at speeds you're probably not comfortable with.
+			description = <color=#CC0300>[HAZARD LEVEL: 5] \n[CLASS: Exotic Atmospheric]</color> \nFracture is a hellish world dancing on the edge of the inferno. Its proximity to Solus has partially melted its surface, creating dangerous lava oceans. A superheated atmosphere of escaping volcanic fumes and rock vapor encompasses the planet. Extreme caution should be taken while exploring the surface.\n\nFracture was discovered during an analysis of Solus’ sunspots. Some Kerbals say it, “looks like how Moho was supposed to according to the legends.”\n\nWEATHER REPORT: Severe. Vaporized rock escapes Fracture at speeds you're probably not comfortable with.
 			radius = 350000
 			geeASL = 0.6
 			albedo = 0.25
