--- a/OR/Configs/Frontier.cfg
+++ b/OR/Configs/Frontier.cfg
@@ -295,6 +295,7 @@
 			fadeEnd = 30000
 			deactivateAltitude = 35000
 			materialType = AtmosphericTriplanarZoomRotation
+			allowFootprints = true
 			PhysicsMaterial
 			{
 				staticFriction = 0
