--- a/OR/Configs/Scar.cfg
+++ b/OR/Configs/Scar.cfg
@@ -157,6 +157,7 @@
 			fadeStart = 10000
 			fadeEnd = 40000
 			deactivateAltitude = 70000
+			allowFootprints = true
 			materialType = AtmosphericTriplanarZoomRotation
 			PhysicsMaterial
 			{
