--- a/OR/Configs/Siren.cfg
+++ b/OR/Configs/Siren.cfg
@@ -114,6 +114,7 @@
 			fadeStart = 10000
 			fadeEnd = 20000
 			deactivateAltitude = 30000
+			allowFootprints = true
 			materialType = AtmosphericTriplanarZoomRotation
 			PhysicsMaterial
 			{
