--- a/OR/Parallax/scatters/Scourge.cfg
+++ b/OR/Parallax/scatters/Scourge.cfg
@@ -918,7 +918,7 @@ ParallaxScatters:NEEDS[Parallax_StockTextures]
 			_EmissionColor = 0,0,0,1
 			_FresnelPower = 3
 			_FresnelColor = 0.15,0.15,0.15,1
-			_Color = 1,1,1,1
+			_Color = 0,0,0,1
 		}
 		SubObjects
 		{
@@ -1002,7 +1002,359 @@ ParallaxScatters:NEEDS[Parallax_StockTextures]
 			_MetallicTint = 0,0,0,1
 			_FresnelPower = 3
 			_FresnelColor = 0.15,0.15,0.15,1
-			_Color = 1,1,1,1
+			_Color = 0,0,0,1
+		}
+		SubObjects
+		{
+		}
+	}
+	Scatter
+	{
+		name = SmallSpikes
+		model = Parallax_StockTextures/_Scatters/Models/Mun/clustermed
+		updateFPS = 1
+		cullingRange = 20
+		cullingLimit = -30
+		alignToTerrainNormal = True
+		collideable = True
+		maxObjects = 20000
+		collisionMesh = Parallax_StockTextures/_Scatters/Models/Mun/medclustercollider
+		SubdivisionSettings
+		{
+			subdivisionLevel = 1
+			subdivisionRangeMode = FixedRange
+			subdivisionRange = 1400
+		}
+		DistributionNoise
+		{
+			mode = Persistent
+			_Frequency = 1700
+			_Persistence = 0.300000012
+			_Lacunarity = 2
+			_Octaves = 6
+			_Seed = 2
+			_NoiseType = 0
+			_NoiseQuality = Standard
+		}
+		Distribution
+		{
+			_Seed = 0
+			_SpawnChance = 1
+			_Range = 1200
+			_PopulationMultiplier = 7
+			_SizeNoiseStrength = 1
+			_MinScale = 0.1,0.25,0.1
+			_MaxScale = 0.25,3,0.25
+			_CutoffScale = 0.5
+			_SteepPower = 8
+			_SteepContrast = 4.5
+			_SteepMidpoint = 0.731000006
+			_NormalDeviance = 0.2
+			_MinAltitude = -1000
+			_MaxAltitude = 20000
+			_RangePow = 4
+			LODs
+			{
+				LOD
+				{
+					model = Parallax_StockTextures/_Scatters/Models/Mun/clustermed2
+					_MainTex = parent
+					range = 40
+					billboard = False
+				}
+				LOD
+				{
+					model = Parallax_StockTextures/_Scatters/Models/Mun/clustermed3
+					_MainTex = parent
+					range = 120
+					billboard = False
+				}
+			}
+		}
+		Material
+		{
+			shader = Custom/ParallaxInstancedUV
+			_MainColor = 1,1,1,1
+			_SubColor = 1,1,1,1
+			_ColorNoiseStrength = 1
+			_MainTex = Parallax_StockTextures/_Scatters/Textures/Mun/PluginData/rockatlas.dds
+			_EdgeBumpMap = Parallax_StockTextures/_Scatters/Textures/Mun/PluginData/rockatlasnrm.dds
+			_Metallic = 0.25
+			_Gloss = 80
+			_NormalSpecularInfluence = 1
+			_Hapke = 0.300000012
+			_BumpScale = 1
+			_FresnelPower = 4
+			_MainTexScale = 1,1
+			_EdgeBumpMapScale = 1,1
+			_EmissionColor = 0,0,0,1
+			_MetallicTint = 0.850000024,0.810000002,0.74000001,1
+			_Color = 0,0,0,1
+			_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+		}
+		SubObjects
+		{
+		}
+	}
+	Scatter
+	{
+		name = MedSpikes
+		model = Parallax_StockTextures/_Scatters/Models/Mun/clustermed
+		updateFPS = 1
+		cullingRange = 20
+		cullingLimit = -30
+		alignToTerrainNormal = True
+		collideable = True
+		maxObjects = 20000
+		collisionMesh = Parallax_StockTextures/_Scatters/Models/Mun/medclustercollider
+		SubdivisionSettings
+		{
+			subdivisionLevel = 1
+			subdivisionRangeMode = FixedRange
+			subdivisionRange = 1400
+		}
+		DistributionNoise
+		{
+			mode = Persistent
+			_Frequency = 1700
+			_Persistence = 0.300000012
+			_Lacunarity = 2
+			_Octaves = 5
+			_Seed = 2
+			_NoiseType = 1
+			_NoiseQuality = Standard
+		}
+		Distribution
+		{
+			_Seed = 0
+			_SpawnChance = 0.5
+			_Range = 1200
+			_PopulationMultiplier = 1
+			_SizeNoiseStrength = 1
+			_MinScale = 0.500000001,4,0.500000001
+			_MaxScale = 1,9,1
+			_CutoffScale = 0.5
+			_SteepPower = 8
+			_SteepContrast = 4.5
+			_SteepMidpoint = 0.731000006
+			_NormalDeviance = 0.2
+			_MinAltitude = -1000
+			_MaxAltitude = 20000
+			_RangePow = 4
+			LODs
+			{
+				LOD
+				{
+					model = Parallax_StockTextures/_Scatters/Models/Mun/clustermed2
+					_MainTex = parent
+					range = 40
+					billboard = False
+				}
+				LOD
+				{
+					model = Parallax_StockTextures/_Scatters/Models/Mun/clustermed3
+					_MainTex = parent
+					range = 120
+					billboard = False
+				}
+			}
+		}
+		Material
+		{
+			shader = Custom/ParallaxInstancedUV
+			_MainColor = 1,1,1,1
+			_SubColor = 1,1,1,1
+			_ColorNoiseStrength = 1
+			_MainTex = Parallax_StockTextures/_Scatters/Textures/Mun/PluginData/rockatlas.dds
+			_EdgeBumpMap = Parallax_StockTextures/_Scatters/Textures/Mun/PluginData/rockatlasnrm.dds
+			_Metallic = 0.25
+			_Gloss = 80
+			_NormalSpecularInfluence = 1
+			_Hapke = 0.300000012
+			_BumpScale = 1
+			_FresnelPower = 4
+			_MainTexScale = 1,1
+			_EdgeBumpMapScale = 1,1
+			_EmissionColor = 0,0,0,1
+			_MetallicTint = 0.850000024,0.810000002,0.74000001,1
+			_Color = 0,0,0,1
+			_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+		}
+		SubObjects
+		{
+		}
+	}
+	Scatter
+	{
+		name = LargeSpikes
+		model = Parallax_StockTextures/_Scatters/Models/Mun/clustermed
+		updateFPS = 1
+		cullingRange = 20
+		cullingLimit = -30
+		alignToTerrainNormal = True
+		collideable = True
+		maxObjects = 20000
+		collisionMesh = Parallax_StockTextures/_Scatters/Models/Mun/medclustercollider
+		SubdivisionSettings
+		{
+			subdivisionLevel = 1
+			subdivisionRangeMode = FixedRange
+			subdivisionRange = 1400
+		}
+		DistributionNoise
+		{
+			mode = Persistent
+			_Frequency = 1700
+			_Persistence = 0.300000012
+			_Lacunarity = 2
+			_Octaves = 5
+			_Seed = 2
+			_NoiseType = 1
+			_NoiseQuality = Standard
+		}
+		Distribution
+		{
+			_Seed = 0
+			_SpawnChance = 0.5
+			_Range = 1200
+			_PopulationMultiplier = 1
+			_SizeNoiseStrength = 1
+			_MinScale = 0.500000001,4,0.500000001
+			_MaxScale = 1.5,25,1.5
+			_CutoffScale = 0.5
+			_SteepPower = 8
+			_SteepContrast = 4.5
+			_SteepMidpoint = 0.731000006
+			_NormalDeviance = 0.2
+			_MinAltitude = -1000
+			_MaxAltitude = 20000
+			_RangePow = 4
+			LODs
+			{
+				LOD
+				{
+					model = Parallax_StockTextures/_Scatters/Models/Mun/clustermed2
+					_MainTex = parent
+					range = 40
+					billboard = False
+				}
+				LOD
+				{
+					model = Parallax_StockTextures/_Scatters/Models/Mun/clustermed3
+					_MainTex = parent
+					range = 120
+					billboard = False
+				}
+			}
+		}
+		Material
+		{
+			shader = Custom/ParallaxInstancedUV
+			_MainColor = 1,1,1,1
+			_SubColor = 1,1,1,1
+			_ColorNoiseStrength = 1
+			_MainTex = Parallax_StockTextures/_Scatters/Textures/Mun/PluginData/rockatlas.dds
+			_EdgeBumpMap = Parallax_StockTextures/_Scatters/Textures/Mun/PluginData/rockatlasnrm.dds
+			_Metallic = 0.25
+			_Gloss = 80
+			_NormalSpecularInfluence = 1
+			_Hapke = 0.300000012
+			_BumpScale = 1
+			_FresnelPower = 4
+			_MainTexScale = 1,1
+			_EdgeBumpMapScale = 1,1
+			_EmissionColor = 0,0,0,1
+			_MetallicTint = 0.850000024,0.810000002,0.74000001,1
+			_Color = 0,0,0,1
+			_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+		}
+		SubObjects
+		{
+		}
+	}
+	Scatter
+	{
+		name = Shards
+		model = Parallax_StockTextures/_Scatters/Models/Mun/clustermed
+		updateFPS = 1
+		cullingRange = 20
+		cullingLimit = -30
+		alignToTerrainNormal = True
+		collideable = True
+		maxObjects = 20000
+		collisionMesh = Parallax_StockTextures/_Scatters/Models/Mun/medclustercollider
+		SubdivisionSettings
+		{
+			subdivisionLevel = 1
+			subdivisionRangeMode = FixedRange
+			subdivisionRange = 1400
+		}
+		DistributionNoise
+		{
+			mode = Persistent
+			_Frequency = 1600
+			_Persistence = 0.300000012
+			_Lacunarity = 2
+			_Octaves = 6
+			_Seed = 3
+			_NoiseType = 1
+			_NoiseQuality = Standard
+		}
+		Distribution
+		{
+			_Seed = 0
+			_SpawnChance = 1
+			_Range = 1200
+			_PopulationMultiplier = 6
+			_SizeNoiseStrength = 1
+			_MinScale = 0.05,0.02,0.05
+			_MaxScale = 1,2,0.2
+			_CutoffScale = 0.5
+			_SteepPower = 8
+			_SteepContrast = 4.5
+			_SteepMidpoint = 0.731000006
+			_NormalDeviance = 0.2
+			_MinAltitude = -1000
+			_MaxAltitude = 20000
+			_RangePow = 4
+			LODs
+			{
+				LOD
+				{
+					model = Parallax_StockTextures/_Scatters/Models/Mun/clustermed2
+					_MainTex = parent
+					range = 40
+					billboard = False
+				}
+				LOD
+				{
+					model = Parallax_StockTextures/_Scatters/Models/Mun/clustermed3
+					_MainTex = parent
+					range = 120
+					billboard = False
+				}
+			}
+		}
+		Material
+		{
+			shader = Custom/ParallaxInstancedUV
+			_MainColor = 1,1,1,1
+			_SubColor = 1,1,1,1
+			_ColorNoiseStrength = 1
+			_MainTex = Parallax_StockTextures/_Scatters/Textures/Mun/PluginData/rockatlas.dds
+			_EdgeBumpMap = Parallax_StockTextures/_Scatters/Textures/Mun/PluginData/rockatlasnrm.dds
+			_Metallic = 0.25
+			_Gloss = 80
+			_NormalSpecularInfluence = 1
+			_Hapke = 0.300000012
+			_BumpScale = 1
+			_FresnelPower = 4
+			_MainTexScale = 1,1
+			_EdgeBumpMapScale = 1,1
+			_EmissionColor = 0,0,0,1
+			_MetallicTint = 0.850000024,0.810000002,0.74000001,1
+			_Color = 0,0,0,1
+			_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
 		}
 		SubObjects
 		{
