--- a/OR/Configs/Windswept.cfg
+++ b/OR/Configs/Windswept.cfg
@@ -287,6 +287,7 @@
 			fadeEnd = 60000
 			deactivateAltitude = 65000
 			materialType = AtmosphericTriplanarZoomRotation
+			allowFootprints = true
 			Material
 			{				
 				factor = 10
